--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
 </head>
 <body>
-    <h1>Discover any hidden places in the world around you</h1>
+    <h1 class="mh">Discover any hidden places in the world around you</h1>
     <p><a href="#">Downloand Excursion(coming soon)</a></p>
 </body>
 </html>
