--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 class="mh">Discover any hidden places in the world around you</h1>
-    <p class="link"><a href="#">Downloand Excursion(coming soon)</a></p>
+    <p ><a class="link" href="#">Downloand Excursion(coming soon)</a></p>
 </body>
 </html>
