--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1 class="mh">Discover any hidden places in the world around you</h1>
     <p ><a class="link" href="#">Downloand Excursion(coming soon)</a></p>
+    <video autoplay loop type="video" src="resources/videos/excursion.mp4"></video>
 </body>
 </html>
