--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Excursion</title>
     <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
 </head>
 <body>
     <h1 class="mh">Discover any hidden places in the world around you</h1>
     <p ><a class="link" href="#">Downloand Excursion(coming soon)</a></p>
-    <video autoplay loop type="video" src="resources/videos/excursion.mp4"></video>
+    <video autoplay loop>
+        <source src="resources\videos\excursion.mp4" type="video/mp4">
+        </video>
 </body>
 </html>
