--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
     <h1 class="mh">Discover any hidden places in the world around you</h1>
     <p ><a class="link" href="#">Downloand Excursion(coming soon)</a></p>
-    <video autoplay loop>
-        <source src="resources\videos\excursion.mp4" type="video/mp4">
-        </video>
+    <video autoplay loop src="resources\videos\excursion.mp4" type="video/mp4"></video>
 </body>
 </html>
