sub header style added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1 class="mh">Discover any hidden places in the world around you</h1>
     <p ><a class="link" href="#">Downloand Excursion(coming soon)</a></p>
     <video autoplay loop src="resources\videos\excursion.mp4" type="video/mp4"></video>
+    <h2 class="sh">your personal guide</h2>
+    <h4 class="th">Excursion remember places you,recommends the new points of inerest around you.</h4>
+
 </body>
 </html>
