--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <p ><a class="link" href="#">Downloand Excursion(coming soon)</a></p>
     <video autoplay loop src="resources\videos\excursion.mp4" type="video/mp4"></video>
     <h2 class="sh">your personal guide</h2>
-    <h4 class="th">Excursion remember places you,recommends the new points of inerest around you.</h4>
+    <h4 class="th">Excursion remember places you,recommends the new points of interest around you.</h4>
+    <p><img src="resources\images\camp.jpg" alt=""></p>
+    <p><img src="resources\images\phone.png" alt=""></p>
+    <p><h3>creater->AASHISH SINGH</h3></p>
+    
 
 </body>
 </html>
