--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h4 class="th">Excursion remember places you,recommends the new points of interest around you.</h4>
     <p><img src="resources\images\camp.jpg" alt=""></p>
     <p><img src="resources\images\phone.png" alt=""></p>
-    <p><h3>creater->AASHISH SINGH</h3></p>
-    
+    <p><h3 class="sh">#AASHISH SINGH</h3></p>
+
 
 </body>
 </html>
